--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "qiroah" "\0"
+            VALUE "FileDescription", "tasmik" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "qiroah" "\0"
+            VALUE "InternalName", "tasmik" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "qiroah.exe" "\0"
-            VALUE "ProductName", "qiroah" "\0"
+            VALUE "OriginalFilename", "tasmik.exe" "\0"
+            VALUE "ProductName", "tasmik" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
