--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.qiroah">
+    package="com.example.tasmik">
    <application
-        android:label="qiroah"
+        android:label="tasmik"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
