--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "qiroah",
-    "short_name": "qiroah",
+    "name": "tasmik",
+    "short_name": "tasmik",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
