--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ flutter:
   uses-material-design: true
   assets:
     - images/
+  fonts:
+    - family : isepMisbah
+      fonts :
+        - asset: fonts/IsepMisbah.ttf
   
   
 
