--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ flutter_icons:
   android: true
   ios: true
   image_path: "images/icon.png"
+  remove_alpha_ios: true
+  adaptive_icon_background : "#E9F1F4"
+  adaptive_icon_foreground: "images/icon.png"
   web:
     generate: true
     image_path: "images/icon.png"
